# rps-ai

./: .coveragerc  Project_Specification.md  README.md  __init__.py  base_game.py  pyproject.toml  test_base_game.py  test_main_game.py
documentation/: Implementation_doc.md  Project_Specification.md  Testing_doc.md  User_Guide.md
main_game/: base_game.py  multi_ai.py  trie.py
testing/: test_base_game.py  test_multi_ai.py  test_trie.py
weekly_reports/: final.md  week1.md  week2.md  week3.md  week4.md  week5.md  week6.md
