[tool.poetry]
name = "rps-ai"
version = "0.1.0"
description = "A Rock Paper Scissors game that uses AI to learn from your play patterns"
authors = ["Iresh Gupta <iresh.gupta@helsinki.fi>"]
readme = "README.md"
packages = [{include = "main_game"}]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-cov = "^4.1.0"
black = "^23.7.0"
isort = "^5.12.0"
flake8 = "^6.1.0"

[tool.poetry.scripts]
rps = "main_game.base_game:play_rps"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ["py39"]

[tool.isort]
profile = "black"
line_length = 88

[tool.pytest.ini_options]
testpaths = ["testing"]
python_files = "test_*.py"
python_functions = "test_*"
addopts = "--cov=testing"